# esp32-nanobot

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
docs/: BUILD_AND_FLASH.md  CONFIGURATION.md  PINOUT.md  QUICKSTART.md  SKILLS_GUIDE.md
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
main/components/ai_provider/: ai_provider.cpp
main/components/ai_provider/include/: ai_provider.h
main/components/config_manager/: config_cli.c  config_manager.c  config_web.c
main/components/config_manager/include/: config_manager.h  config_web.h
main/components/feishu_bot/: feishu_bot.cpp
main/components/feishu_bot/include/: feishu_bot.h
main/components/qq_bot/: qq_bot.cpp
main/components/qq_bot/include/: qq_bot.h
main/components/skills/: daily_summary.cpp  git_commits.c
main/components/skills/include/: daily_summary.h  git_commits.h
main/components/tft_display/: tft_display.c
main/components/tft_display/include/: tft_display.h
main/components/utils/: base64.c  json_parser.c
main/components/utils/include/: json_parser.h
main/components/wifi_manager/: wifi_manager.c
main/components/wifi_manager/include/: wifi_manager.h
scripts/: flash.bat  flash.sh
