idf_component_register(
    SRCS
        "main.cpp"
        "components/wifi_manager/wifi_manager.c"
        "components/config_manager/config_manager.c"
        "components/config_manager/config_cli.c"
        "components/config_manager/config_web.c"
        "components/ai_provider/ai_provider.cpp"
        "components/qq_bot/qq_bot.cpp"
        "components/feishu_bot/feishu_bot.cpp"
        "components/skills/daily_summary.cpp"
        "components/skills/git_commits.c"
        "components/tft_display/tft_display.c"
        "components/utils/json_parser.c"
        "components/utils/base64.c"
    INCLUDE_DIRS
        "."
        "components/wifi_manager/include"
        "components/config_manager/include"
        "components/ai_provider/include"
        "components/qq_bot/include"
        "components/feishu_bot/include"
        "components/skills/include"
        "components/tft_display/include"
        "components/utils/include"
    REQUIRES
        esp_wifi
        esp_netif
        nvs_flash
        esp_http_client
        esp_http_server
        cxx
        json
        mbedtls
        driver
        esp_app_format
        esp_timer
)
